--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="parent">Parent</string>
     <string name="child">Child</string>
     <string name="danzig">I am Danzig!</string>
+    <string name="fromDefStyle">defStyle string</string>
 </resources>
